crates/pg_syntax/tests/snapshots/postgres_regress/join_hash@196.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select final > 1 as multibatch\n  from hash_join_batches(\n$$\n  select count(*) from join_foo\n    left join (select b1.id, b1.t from join_bar b1 join join_bar b2 using (id)) ss\n    on join_foo.id < ss.id + 1 and join_foo.id > ss.id - 1;\n$$);"
---
SelectStmt@0..239
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..30
    AExpr@7..16
      ColumnRef@7..12
        Ident@7..12 "final"
      Whitespace@12..13 " "
      Ascii62@13..14 ">"
      Whitespace@14..15 " "
      AConst@15..16
        Iconst@15..16 "1"
    Whitespace@16..17 " "
    As@17..19 "as"
    Whitespace@19..20 " "
    Ident@20..30 "multibatch"
  Newline@30..31 "\n"
  Whitespace@31..33 "  "
  From@33..37 "from"
  Whitespace@37..38 " "
  RangeFunction@38..237
    List@38..237
      FuncCall@38..237
        Ident@38..55 "hash_join_batches"
        Ascii40@55..56 "("
        Newline@56..57 "\n"
        AConst@57..237
          Sconst@57..237 "$$\n  select count(*)  ..."
  Ascii41@237..238 ")"
  Ascii59@238..239 ";"

