crates/pg_syntax/tests/snapshots/postgres_regress/join_hash@232.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TABLE hjtest_2 (a bool, id int, b text, c int);"
---
CreateStmt@0..54
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..21
    Ident@13..21 "hjtest_2"
  Whitespace@21..22 " "
  Ascii40@22..23 "("
  ColumnDef@23..29
    Ident@23..24 "a"
    Whitespace@24..25 " "
    TypeName@25..29
      Ident@25..29 "bool"
  Ascii44@29..30 ","
  Whitespace@30..31 " "
  ColumnDef@31..37
    Ident@31..33 "id"
    Whitespace@33..34 " "
    TypeName@34..37
      IntP@34..37 "int"
  Ascii44@37..38 ","
  Whitespace@38..39 " "
  ColumnDef@39..45
    Ident@39..40 "b"
    Whitespace@40..41 " "
    TypeName@41..45
      TextP@41..45 "text"
  Ascii44@45..46 ","
  Whitespace@46..47 " "
  ColumnDef@47..52
    Ident@47..48 "c"
    Whitespace@48..49 " "
    TypeName@49..52
      IntP@49..52 "int"
  Ascii41@52..53 ")"
  Ascii59@53..54 ";"

