crates/pg_syntax/tests/snapshots/postgres_regress/json@100.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT test_json ->> 7 FROM test_json WHERE json_type = 'array';"
---
SelectStmt@0..64
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..22
    AExpr@7..22
      ColumnRef@7..16
        Ident@7..16 "test_json"
      Whitespace@16..17 " "
      Op@17..20 "->>"
      Whitespace@20..21 " "
      AConst@21..22
        Iconst@21..22 "7"
  Whitespace@22..23 " "
  From@23..27 "FROM"
  Whitespace@27..28 " "
  RangeVar@28..37
    Ident@28..37 "test_json"
  Whitespace@37..38 " "
  Where@38..43 "WHERE"
  Whitespace@43..44 " "
  AExpr@44..63
    ColumnRef@44..53
      Ident@44..53 "json_type"
    Whitespace@53..54 " "
    Ascii61@54..55 "="
    Whitespace@55..56 " "
    AConst@56..63
      Sconst@56..63 "'array'"
  Ascii59@63..64 ";"

